--- a/numpy_scipy/NumpyScipyExercise.ipynb
+++ b/numpy_scipy/NumpyScipyExercise.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -61,18 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a = np.array([1,2,0,0,4,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -83,13 +72,43 @@
        "(array([0, 1, 4]),)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "a = np.array([1,2,0,0,4,0])\n",
     "a.nonzero()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### return all values greather or equal to 2 from [1,2,0,0,4,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[a>=2]"
    ]
   },
   {
@@ -101,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +131,7 @@
        "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,6 +139,252 @@
    "source": [
     "nv = np.zeros(10)\n",
     "nv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a vector containing 50 evenly spaced values between 0 and 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.04081633,  0.08163265,  0.12244898,  0.16326531,\n",
+       "        0.20408163,  0.24489796,  0.28571429,  0.32653061,  0.36734694,\n",
+       "        0.40816327,  0.44897959,  0.48979592,  0.53061224,  0.57142857,\n",
+       "        0.6122449 ,  0.65306122,  0.69387755,  0.73469388,  0.7755102 ,\n",
+       "        0.81632653,  0.85714286,  0.89795918,  0.93877551,  0.97959184,\n",
+       "        1.02040816,  1.06122449,  1.10204082,  1.14285714,  1.18367347,\n",
+       "        1.2244898 ,  1.26530612,  1.30612245,  1.34693878,  1.3877551 ,\n",
+       "        1.42857143,  1.46938776,  1.51020408,  1.55102041,  1.59183673,\n",
+       "        1.63265306,  1.67346939,  1.71428571,  1.75510204,  1.79591837,\n",
+       "        1.83673469,  1.87755102,  1.91836735,  1.95918367,  2.        ])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0,2,2./49)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a 4x4 identity matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0.,  1.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Create a 8x8 ceckboard matrix (values 0 and 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.zeros((8,8))\n",
+    "a[::2, ::2] = 1\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### create a copy of the following matrix and set the first column to zeros.  Check that the original matrix is ualtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "[[ 0  1  2  3]\n",
+      " [ 0  5  6  7]\n",
+      " [ 0  9 10 11]\n",
+      " [ 0 13 14 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.arange(16).reshape((4,4))\n",
+    "B = A.copy()\n",
+    "B[:,0] = 0\n",
+    "print A\n",
+    "print B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a random vector of size 10 and sort it "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.08447395,  0.13274391,  0.22543458,  0.31213943,  0.47095565,\n",
+       "        0.68858524,  0.73299961,  0.73654291,  0.76203036,  0.87800717])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.rand(10)\n",
+    "a.sort()\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### compute the matrix product of two matrices of your choice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 2, 1],\n",
+       "       [6, 5, 4],\n",
+       "       [9, 8, 7]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array( [[1,2,3],[4,5,6],[7,8,9]] )\n",
+    "B = np.array([[0,0,1],[0,1,0],[1,0,0]])\n",
+    "np.dot(A,B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### use the matrix inverse function (np.linalg.inv) to solve the following linear equation system:\n",
+    "* 8 x + 2 y = 24\n",
+    "* -4 x + y = -8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.5,  2. ])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[8,2], [-4, 1]])\n",
+    "b = np.array( [24,-8] )\n",
+    "\n",
+    "np.dot( np.linalg.inv(A), b )"
    ]
   },
   {
@@ -148,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
