--- a/numpy_scipy/NumpyScipyExercise.ipynb
+++ b/numpy_scipy/NumpyScipyExercise.ipynb
@@ -4,18 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### execute the following line to import numpy and rename it "
+    "### execute the following line to import numpy and scipy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 161,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import scipy.optimize"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +74,7 @@
        "(array([0, 1, 4]),)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +104,7 @@
        "array([2, 4])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +133,7 @@
        "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +172,7 @@
        "        1.83673469,  1.87755102,  1.91836735,  1.95918367,  2.        ])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,12 +185,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Construct a matrix by repeating the following row 5 times: [4, 0.2, 5.6, 1.2] (hint: np.repeat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4. ,  0.2,  5.6,  1.2],\n",
+       "       [ 4. ,  0.2,  5.6,  1.2],\n",
+       "       [ 4. ,  0.2,  5.6,  1.2],\n",
+       "       [ 4. ,  0.2,  5.6,  1.2],\n",
+       "       [ 4. ,  0.2,  5.6,  1.2]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.repeat( np.array([[4, 0.2, 5.6, 1.2]]), 5, axis=0 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Create a 4x4 identity matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -202,7 +237,7 @@
        "       [ 0.,  0.,  0.,  1.]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -231,16 +266,16 @@
      "data": {
       "text/plain": [
        "array([[ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.,  1.,  0.,  1.,  0.,  1.],\n",
        "       [ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.,  1.,  0.,  1.,  0.,  1.],\n",
        "       [ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.,  1.,  0.,  1.,  0.,  1.],\n",
        "       [ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]])"
+       "       [ 0.,  1.,  0.,  1.,  0.,  1.,  0.,  1.]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,6 +283,7 @@
    "source": [
     "a = np.zeros((8,8))\n",
     "a[::2, ::2] = 1\n",
+    "a[1::2, 1::2] = 1\n",
     "a"
    ]
   },
@@ -260,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +333,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = np.random.rand(10)\n",
+    "a.sort()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### compute the mean of the random array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -305,19 +360,83 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.08447395,  0.13274391,  0.22543458,  0.31213943,  0.47095565,\n",
-       "        0.68858524,  0.73299961,  0.73654291,  0.76203036,  0.87800717])"
+       "0.50736677507589545"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.random.rand(10)\n",
-    "a.sort()\n",
-    "a"
+    "a.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### find the smallest element of the random arary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08069988146775986"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.min()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### generate the follwing matrix (without explicitly writing it)\n",
+    "[[1,  6, 11],<br>\n",
+    " [2,  7, 12],<br>\n",
+    " [3,  8, 13],<br>\n",
+    " [4,  9, 14],<br>\n",
+    "[5, 10, 15]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  6, 11],\n",
+       "       [ 2,  7, 12],\n",
+       "       [ 3,  8, 13],\n",
+       "       [ 4,  9, 14],\n",
+       "       [ 5, 10, 15]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.reshape( range(1,16), (3,5) ).T"
    ]
   },
   {
@@ -329,7 +448,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 2 1]\n",
+      " [6 5 4]\n",
+      " [9 8 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array( [[1,2,3],[4,5,6],[7,8,9]] )\n",
+    "B = np.array([[0,0,1],[0,1,0],[1,0,0]])\n",
+    "C = np.dot(A,B)\n",
+    "print C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### compute the matrix product of the following matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -337,20 +487,77 @@
     {
      "data": {
       "text/plain": [
-       "array([[3, 2, 1],\n",
-       "       [6, 5, 4],\n",
-       "       [9, 8, 7]])"
+       "array([[27, 54],\n",
+       "       [52, 78]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = np.array( [[1,2,3],[4,5,6],[7,8,9]] )\n",
-    "B = np.array([[0,0,1],[0,1,0],[1,0,0]])\n",
-    "np.dot(A,B)"
+    "A = np.array([[1,6],[6,2],[5,8]])\n",
+    "B = np.array([[2,5],[0,4],[5,5]])\n",
+    "np.dot(A.T, B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### compute the determinant of the matrix product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.6613381477509402e-16"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.det(C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### find the smallest element in matrix A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.min()"
    ]
   },
   {
@@ -364,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -375,7 +582,7 @@
        "array([ 2.5,  2. ])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,13 +595,122 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### compute the integral of the polynomial x^5 - 13x^3+ 3x^2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poly1d([ 0.2       ,  0.        , -4.33333333,  1.5       ,  1.        ,  0.        ])"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = sp.poly1d([1, 0, -13, 3, 1])\n",
+    "p.integ()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### search in the scipy library for a function to compute a zero-crossing (root) of the above polynomial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.18516006])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_z = sp.optimize.fsolve(p, 0)\n",
+    "x_z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear regression\n",
+    "We have a dataset which relates the final univerity grade of students to their high-school grades and grades from SAT tests<sup>[1]</sup>. The dataset is given below and containts the following columns: 1. high school grade point average, 2. Math SAT score, 3. Verbal SAT score, 4. Computer science grade point average, 5. Overall university grade point average.\n",
+    "\n",
+    "Compute a linear regression to predict the overall university grade point average from the remaining variables. Hint: the standard linear regression model reads:\n",
+    "\n",
+    "$\n",
+    "y = X * \\beta\n",
+    "$\n",
+    "\n",
+    "and the coefficients $\\beta$ can be computed using the following formula:\n",
+    "\n",
+    "$\n",
+    "\\beta = (X^TX)^{-1}X^Ty\n",
+    "$\n",
+    "\n",
+    "compute the predicted values for the overall university grade ($y$) and the residuals ($y_i - data_i$). Compute the mean residual.\n",
+    "\n",
+    "\n",
+    "[1] source: http://onlinestatbook.com/2/case_studies/sat.html\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0036509585767943546"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "import pylab\n",
+    "data = pickle.load(open('data.p', 'r'))\n",
+    "\n",
+    "y = data[:,4]\n",
+    "X = data[:,:3]\n",
+    "\n",
+    "b = np.dot( np.dot( np.linalg.inv(np.dot(X.T,X)), X.T ), y )\n",
+    "res = np.dot(X,b)\n",
+    "(y - res).mean()"
+   ]
   }
  ],
  "metadata": {
@@ -413,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
