--- a/numpy_scipy/NumpyScipyExercise.ipynb
+++ b/numpy_scipy/NumpyScipyExercise.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### execute the following line to import numpy and scipy"
+    "### Execute the following line to import numpy and scipy"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### return all values greather or equal to 2 from [1,2,0,0,4,0]"
+    "### Return all values greather or equal to 2 from [1,2,0,0,4,0]"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### create a copy of the following matrix and set the first column to zeros.  Check that the original matrix is ualtered"
+    "### Create a copy of the following matrix and set the first column to zeros.  Check that the original matrix is ualtered"
    ]
   },
   {
@@ -347,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### compute the mean of the random array"
+    "### Compute the mean of the random array"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### find the smallest element of the random arary"
+    "### Find the smallest element of the random arary"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### generate the follwing matrix (without explicitly writing it)\n",
+    "### Generate the follwing matrix (without explicitly writing it)\n",
     "[[1,  6, 11],<br>\n",
     " [2,  7, 12],<br>\n",
     " [3,  8, 13],<br>\n",
@@ -443,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### compute the matrix product of two matrices of your choice"
+    "### Compute the matrix product of two matrices of your choice"
    ]
   },
   {
@@ -474,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### compute the matrix product of the following matrices"
+    "### Compute the matrix product of the following matrices"
    ]
   },
   {
@@ -506,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### compute the determinant of the matrix product"
+    "### Compute the determinant of the matrix product"
    ]
   },
   {
@@ -535,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### find the smallest element in matrix A"
+    "### Find the smallest element in matrix A"
    ]
   },
   {
@@ -564,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### use the matrix inverse function (np.linalg.inv) to solve the following linear equation system:\n",
+    "### Use the matrix inverse function (np.linalg.inv) to solve the following linear equation system:\n",
     "* 8 x + 2 y = 24\n",
     "* -4 x + y = -8"
    ]
@@ -600,7 +600,7 @@
     "collapsed": true
    },
    "source": [
-    "### compute the integral of the polynomial x^5 - 13x^3+ 3x^2"
+    "### Compute the integral of the polynomial x^5 - 13x^3+ 3x^2"
    ]
   },
   {
@@ -630,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### search in the scipy library for a function to compute a zero-crossing (root) of the above polynomial"
+    "### Search in the scipy library for a function to compute a zero-crossing (root) of the above polynomial"
    ]
   },
   {
