--- a/numpy_scipy/NumpyScipyExercise.ipynb
+++ b/numpy_scipy/NumpyScipyExercise.ipynb
@@ -32,27 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n",
-      "[17 18 19 20]\n",
-      "[ 0  2  4  6  8 10 12 14 16 18 20]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.arange(21)\n",
-    "print( a[-1] )\n",
-    "print( a[-4:] )\n",
-    "print( a[0::2] )"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -63,26 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([0, 1, 4]),)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.array([1,2,0,0,4,0])\n",
-    "a.nonzero()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -93,25 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 4])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a[a>=2]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -122,26 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nv = np.zeros(10)\n",
-    "nv"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -152,34 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.        ,  0.04081633,  0.08163265,  0.12244898,  0.16326531,\n",
-       "        0.20408163,  0.24489796,  0.28571429,  0.32653061,  0.36734694,\n",
-       "        0.40816327,  0.44897959,  0.48979592,  0.53061224,  0.57142857,\n",
-       "        0.6122449 ,  0.65306122,  0.69387755,  0.73469388,  0.7755102 ,\n",
-       "        0.81632653,  0.85714286,  0.89795918,  0.93877551,  0.97959184,\n",
-       "        1.02040816,  1.06122449,  1.10204082,  1.14285714,  1.18367347,\n",
-       "        1.2244898 ,  1.26530612,  1.30612245,  1.34693878,  1.3877551 ,\n",
-       "        1.42857143,  1.46938776,  1.51020408,  1.55102041,  1.59183673,\n",
-       "        1.63265306,  1.67346939,  1.71428571,  1.75510204,  1.79591837,\n",
-       "        1.83673469,  1.87755102,  1.91836735,  1.95918367,  2.        ])"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(0,2,2./49)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -190,29 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 4. ,  0.2,  5.6,  1.2],\n",
-       "       [ 4. ,  0.2,  5.6,  1.2],\n",
-       "       [ 4. ,  0.2,  5.6,  1.2],\n",
-       "       [ 4. ,  0.2,  5.6,  1.2],\n",
-       "       [ 4. ,  0.2,  5.6,  1.2]])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.repeat( np.array([[4, 0.2, 5.6, 1.2]]), 5, axis=0 )"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -223,28 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  1.]])"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.eye(4)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -257,35 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
-       "       [ 0.,  1.,  0.,  1.,  0.,  1.,  0.,  1.],\n",
-       "       [ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
-       "       [ 0.,  1.,  0.,  1.,  0.,  1.,  0.,  1.],\n",
-       "       [ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
-       "       [ 0.,  1.,  0.,  1.,  0.,  1.,  0.,  1.],\n",
-       "       [ 1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.],\n",
-       "       [ 0.,  1.,  0.,  1.,  0.,  1.,  0.,  1.]])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.zeros((8,8))\n",
-    "a[::2, ::2] = 1\n",
-    "a[1::2, 1::2] = 1\n",
-    "a"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -296,33 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0  1  2  3]\n",
-      " [ 4  5  6  7]\n",
-      " [ 8  9 10 11]\n",
-      " [12 13 14 15]]\n",
-      "[[ 0  1  2  3]\n",
-      " [ 0  5  6  7]\n",
-      " [ 0  9 10 11]\n",
-      " [ 0 13 14 15]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = np.arange(16).reshape((4,4))\n",
-    "B = A.copy()\n",
-    "B[:,0] = 0\n",
-    "print A\n",
-    "print B"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -333,15 +178,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "a = np.random.rand(10)\n",
-    "a.sort()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -352,25 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.50736677507589545"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.mean()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -381,25 +210,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.08069988146775986"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.min()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -415,29 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  6, 11],\n",
-       "       [ 2,  7, 12],\n",
-       "       [ 3,  8, 13],\n",
-       "       [ 4,  9, 14],\n",
-       "       [ 5, 10, 15]])"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.reshape( range(1,16), (3,5) ).T"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -448,27 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3 2 1]\n",
-      " [6 5 4]\n",
-      " [9 8 7]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = np.array( [[1,2,3],[4,5,6],[7,8,9]] )\n",
-    "B = np.array([[0,0,1],[0,1,0],[1,0,0]])\n",
-    "C = np.dot(A,B)\n",
-    "print C"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -479,28 +263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[27, 54],\n",
-       "       [52, 78]])"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = np.array([[1,6],[6,2],[5,8]])\n",
-    "B = np.array([[2,5],[0,4],[5,5]])\n",
-    "np.dot(A.T, B)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -511,25 +279,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-6.6613381477509402e-16"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linalg.det(C)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -540,25 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A.min()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -571,28 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2.5,  2. ])"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = np.array([[8,2], [-4, 1]])\n",
-    "b = np.array( [24,-8] )\n",
-    "\n",
-    "np.dot( np.linalg.inv(A), b )"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -605,26 +331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "poly1d([ 0.2       ,  0.        , -4.33333333,  1.5       ,  1.        ,  0.        ])"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p = sp.poly1d([1, 0, -13, 3, 1])\n",
-    "p.integ()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -635,26 +347,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.18516006])"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_z = sp.optimize.fsolve(p, 0)\n",
-    "x_z"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -683,34 +381,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0036509585767943546"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
-    "import pylab\n",
-    "data = pickle.load(open('data.p', 'r'))\n",
-    "\n",
-    "y = data[:,4]\n",
-    "X = data[:,:3]\n",
-    "\n",
-    "b = np.dot( np.dot( np.linalg.inv(np.dot(X.T,X)), X.T ), y )\n",
-    "res = np.dot(X,b)\n",
-    "(y - res).mean()"
+    "data = pickle.load(open('data.p', 'r'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
