converted basics to python3

--- a/basics/basics.ipynb
+++ b/basics/basics.ipynb
@@ -95,7 +95,7 @@
    },
    "outputs": [],
    "source": [
-    "print \"Hello World\""
+    "print(\"Hello World\")"
    ]
   },
   {
@@ -122,8 +122,8 @@
    "source": [
     "height = 1\n",
     "width = 2\n",
-    "print height\n",
-    "print width"
+    "print(height)\n",
+    "print(width)"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "outputs": [],
    "source": [
     "add_height_width = height + width\n",
-    "print add_height_width"
+    "print(add_height_width)"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "source": [
     "width = 12\n",
     "add_height_width = height + width\n",
-    "print add_height_width"
+    "print(add_height_width)"
    ]
   },
   {
@@ -212,7 +212,7 @@
    },
    "outputs": [],
    "source": [
-    "height / 2"
+    "height / 2 # correct in python 3, before 1/2 resulted in 1"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "outputs": [],
    "source": [
     "text = \"this is a string\"\n",
-    "print text"
+    "print(text)"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "outputs": [],
    "source": [
     "text = \"this is a string 'containing a quote'\"\n",
-    "print text"
+    "print(text)"
    ]
   },
   {
@@ -320,7 +320,7 @@
     "more \n",
     "than one line\n",
     "\"\"\"\n",
-    "print text"
+    "print(text)"
    ]
   },
   {
@@ -341,7 +341,7 @@
     "first_part = \"this is the first part ... \"\n",
     "second_part = \"and this is the second part of the text\"\n",
     "concat = first_part + second_part\n",
-    "print concat"
+    "print(concat)"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "outputs": [],
    "source": [
     "list_var = []\n",
-    "print list_var"
+    "print(list_var)"
    ]
   },
   {
@@ -404,7 +404,7 @@
    "outputs": [],
    "source": [
     "list_var = [1,2,3,4]\n",
-    "print list_var"
+    "print(list_var)"
    ]
   },
   {
@@ -451,8 +451,8 @@
    },
    "outputs": [],
    "source": [
-    "print list_var[0:2]\n",
-    "print list_var[:2]"
+    "print(list_var[0:2])\n",
+    "print(list_var[:2])"
    ]
   },
   {
@@ -493,7 +493,7 @@
    "outputs": [],
    "source": [
     "list_var[0] = [1,2,3]\n",
-    "print list_var"
+    "print(list_var)"
    ]
   },
   {
@@ -530,7 +530,7 @@
    "outputs": [],
    "source": [
     "list_var.append(\"wuff\")\n",
-    "print list_var"
+    "print(list_var)"
    ]
   },
   {
@@ -543,7 +543,7 @@
    "source": [
     "list_extention = [\"a\",\"b\",\"c\"]\n",
     "list_var.extend(list_extention)\n",
-    "print list_var"
+    "print(list_var)"
    ]
   },
   {
@@ -598,7 +598,7 @@
    "outputs": [],
    "source": [
     "dictionary = {'one_key': 1, 'second_key': 2}\n",
-    "print dictionary"
+    "print(dictionary)"
    ]
   },
   {
@@ -632,7 +632,7 @@
    "outputs": [],
    "source": [
     "dictionary['one_key'] = 21\n",
-    "print dictionary"
+    "print(dictionary)"
    ]
   },
   {
@@ -644,7 +644,7 @@
    "outputs": [],
    "source": [
     "dictionary['third_key'] = 3\n",
-    "print dictionary"
+    "print(dictionary)"
    ]
   },
   {
@@ -657,7 +657,7 @@
    "source": [
     "new_dict = {'one_key':12, 'third_key':14, 'fourth_key': 4}\n",
     "dictionary.update(new_dict)\n",
-    "print dictionary"
+    "print(dictionary)"
    ]
   },
   {
@@ -727,8 +727,8 @@
    "outputs": [],
    "source": [
     "if test_case:\n",
-    "    print 'test_case != []'\n",
-    "print 'always true'"
+    "    print('test_case != []')\n",
+    "print('always true')"
    ]
   },
   {
@@ -740,11 +740,11 @@
    "outputs": [],
    "source": [
     "if len(test_case) == 0:\n",
-    "    print \"length is 0\"\n",
+    "    print(\"length is 0\")\n",
     "elif len(test_case) >0 and len(test_case) <= 4:\n",
-    "    print 'length test_case is between 1 and 4'\n",
+    "    print('length test_case is between 1 and 4')\n",
     "else:\n",
-    "    print 'length test_case is larger then 4'"
+    "    print('length test_case is larger then 4')"
    ]
   },
   {
@@ -774,7 +774,7 @@
    "outputs": [],
    "source": [
     "for i in iter_list:\n",
-    "    print \"i=%s\"%i"
+    "    print(\"i=%s\"%i)"
    ]
   },
   {
@@ -787,7 +787,7 @@
    "source": [
     "step = 0\n",
     "while step != len(iter_list):\n",
-    "    print \"step:%s i:%s\"%(step, iter_list[step])\n",
+    "    print(\"step:%s i:%s\"%(step, iter_list[step]))\n",
     "    step += 1\n",
     "    \n",
     "    "
@@ -803,7 +803,7 @@
    "source": [
     "step = 0\n",
     "while step != len(iter_list):\n",
-    "    print step, iter_list[step]\n",
+    "    print(step, iter_list[step])\n",
     "    step += 1"
    ]
   },
@@ -834,7 +834,7 @@
    "outputs": [],
    "source": [
     "for i in range(len(iter_list)):\n",
-    "    print \"i:%s value:%s\"%(i, iter_list[i])"
+    "    print(\"i:%s value:%s\"%(i, iter_list[i]))"
    ]
   },
   {
@@ -846,7 +846,7 @@
    "outputs": [],
    "source": [
     "for i, value in enumerate(iter_list):\n",
-    "    print i, value "
+    "    print(i, value)"
    ]
   },
   {
@@ -865,7 +865,7 @@
    "outputs": [],
    "source": [
     "for key in dictionary:\n",
-    "    print key, dictionary[key]"
+    "    print(key, dictionary[key])"
    ]
   },
   {
@@ -876,8 +876,8 @@
    },
    "outputs": [],
    "source": [
-    "for key, value in dictionary.iteritems():\n",
-    "    print key, value"
+    "for key, value in dictionary.items():\n",
+    "    print(key, value)"
    ]
   },
   {
@@ -889,7 +889,7 @@
    "outputs": [],
    "source": [
     "for i, key in enumerate(dictionary):\n",
-    "    print i, key"
+    "    print(i, key)"
    ]
   },
   {
@@ -908,9 +908,9 @@
    "outputs": [],
    "source": [
     "for i in iter_list:\n",
-    "    print i\n",
+    "    print(i)\n",
     "    if i == 3:\n",
-    "        print 'i == 3 - break'\n",
+    "        print('i == 3 - break')\n",
     "        break"
    ]
   },
@@ -923,11 +923,11 @@
    "outputs": [],
    "source": [
     "for i in iter_list:\n",
-    "    print i\n",
+    "    print(i)\n",
     "    if i == 3:\n",
-    "        print \"i == 3 - continue\"\n",
+    "        print(\"i == 3 - continue\")\n",
     "        continue\n",
-    "        print \"behind continue\""
+    "        print(\"behind continue\")"
    ]
   },
   {
@@ -939,10 +939,10 @@
    "outputs": [],
    "source": [
     "for i in iter_list:\n",
-    "    print i\n",
+    "    print(i)\n",
     "    if i == 3:\n",
     "        pass\n",
-    "        print \"behind pass\""
+    "        print(\"behind pass\")"
    ]
   },
   {
@@ -964,7 +964,7 @@
     "    \"\"\"Print a Fibonacci series up to n.\"\"\" # docstring\n",
     "    a, b = 0, 1  # multiple assignement\n",
     "    while a < n:\n",
-    "        print a,  # prevents the newline\n",
+    "        print(a),  # prevents the newline\n",
     "        a, b = b, a+b  # another multiple assignement\n",
     "        \n",
     "fib(500)"
@@ -1009,7 +1009,7 @@
     "        a, b = b, a+b  # another multiple assignement\n",
     "    return result\n",
     "fib_result = fib(500)\n",
-    "print fib_result"
+    "print(fib_result)"
    ]
   },
   {
@@ -1042,7 +1042,7 @@
     "        a, b = first_number, second_number  # multiple assignement\n",
     "    \n",
     "    while a < number:\n",
-    "        print a,  # prevents the newline\n",
+    "        print(a),  # prevents the newline\n",
     "        a, b = b, a+b  # another multiple assignement\n",
     "extended_fib(500)"
    ]
@@ -1151,7 +1151,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1196,39 +1196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import this"
    ]
@@ -1251,21 +1223,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
