--- a/basics/basics.ipynb
+++ b/basics/basics.ipynb
@@ -37,9 +37,9 @@
     "    - Python (https://www.python.org/)\n",
     "    - IPython (http://ipython.org/)\n",
     "    - IPython Notebook (http://ipython.org/notebook.html)\n",
-    "    - an editor of your choice like Sublime Text\n",
     "    \n",
     "You could use:\n",
+    "    - an editor of your choice like Sublime Text\n",
     "    - an IDE (PyCharm)\n",
     "    - Python debuggers (pdb)\n",
     "    - Code checkers (pylint)"
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -387,12 +387,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is a string 'containing a quote'\n"
+      "this is a string \"containing a quote\"\n"
      ]
     }
    ],
    "source": [
-    "text = \"this is a string 'containing a quote'\"\n",
+    "text = 'this is a string \"containing a quote\"'\n",
     "print (text)"
    ]
   },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -480,7 +480,7 @@
        "'example example example '"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,28 +864,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'one_key': 1, 'second_key': 2}"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict(one_key=1, second_key=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "metadata": {
     "collapsed": false
@@ -1004,6 +982,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "statement = True\n",
+    "if statement is True:\n",
+    "    do something\n",
+    "else:\n",
+    "    do something else\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "many\n"
+     ]
+    }
+   ],
+   "source": [
+    "amount = 12\n",
+    "if amount > 10:\n",
+    "    print ('many')\n",
+    "else:\n",
+    "    print('few')\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1027,18 +1046,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "test_case = [1,2,3,4,5]"
+    "test_list = [1,2,3,4,5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1047,20 +1066,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_case != []\n",
+      "test_list != []\n",
       "always true\n"
      ]
     }
    ],
    "source": [
-    "if test_case:\n",
-    "    print ('test_case != []')\n",
+    "if test_list:\n",
+    "    print ('test_list != []') # list is not empty\n",
     "print ('always true')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1069,17 +1088,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "length test_case is larger then 4\n"
+      "length test_List is larger then 4\n"
      ]
     }
    ],
    "source": [
-    "if len(test_case) == 0:\n",
+    "if len(test_list) == 0:\n",
     "    print (\"length is 0\")\n",
-    "elif len(test_case) >0 and len(test_case) <= 4:\n",
-    "    print ('length test_case is between 1 and 4')\n",
+    "elif len(test_list) >0 and len(test_list) <= 4:\n",
+    "    print ('length test_list is between 1 and 4')\n",
     "else:\n",
-    "    print ('length test_case is larger then 4')"
+    "    print ('length test_List is larger then 4')"
    ]
   },
   {
@@ -1091,7 +1110,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "iter_list = ['a', 'b', 'c']\n",
+    "for i in iter_list:\n",
+    "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1102,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1111,46 +1153,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i=1\n",
-      "i=2\n",
-      "i=3\n",
-      "i=4\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in iter_list:\n",
-    "    print (\"i=%s\" % i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step:0 i:1\n",
-      "step:1 i:2\n",
-      "step:2 i:3\n",
-      "step:3 i:4\n"
+      "value: 0\n",
+      "value: 1\n",
+      "value: 2\n",
+      "value: 3\n"
      ]
     }
    ],
    "source": [
     "step = 0\n",
     "while step != len(iter_list):\n",
-    "    print (\"step:%s i:%s\" % (step, iter_list[step]) )\n",
+    "    print (\"value: %i\" % step )\n",
     "    step += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -1182,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1204,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -1213,21 +1232,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i:0 value:1\n",
-      "i:1 value:2\n",
-      "i:2 value:3\n",
-      "i:3 value:4\n"
+      "0 value:1\n",
+      "1 value:2\n",
+      "2 value:3\n",
+      "3 value:4\n"
      ]
     }
    ],
    "source": [
     "for i in range(len(iter_list)):\n",
-    "    print (\"i:%s value:%s\" % (i, iter_list[i]))"
+    "    print (\"%i value:%i\" % (i, iter_list[i]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -1359,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1787,9 +1806,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [codeacademy](https://www.codecademy.com/learn/python/)\n",
-    "  ![cation](http://cdn.devilsworkshop.org/files/2012/07/Learn_Python_Beginners.png)"
+    "- [codeacademy](https://www.codecademy.com/learn/python/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
