--- a/ode/Introduction_ODEs.ipynb
+++ b/ode/Introduction_ODEs.ipynb
@@ -84,7 +84,7 @@
     "$$ \\frac{\\mathrm{d}\\,W}{\\mathrm{d}\\,t} = cWR-dW $$  \n",
     "\n",
     "### Variables:\n",
-    "H: Rabbit population\n",
+    "R: Rabbit population\n",
     "\n",
     "W: Wolf population\n",
     "\n",
