FourierAnalyse im Teil ODE ergänzt.

--- a/ode/Introduction_ODEs.ipynb
+++ b/ode/Introduction_ODEs.ipynb
@@ -84,7 +84,7 @@
     "$$ \\frac{\\mathrm{d}\\,W}{\\mathrm{d}\\,t} = cWR-dW $$  \n",
     "\n",
     "### Variables:\n",
-    "H: Rabbit population\n",
+    "R: Rabbit population\n",
     "\n",
     "W: Wolf population\n",
     "\n",
@@ -547,26 +547,67 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "p['Kd'] = 0.05\n",
+    "T = 500\n",
+    "time_steps = 1000\n",
+    "t = np.linspace(0,T,time_steps)\n",
+    "y = odeint(f, y0, t, (p,))\n",
+    "centered_y = y - y.mean(axis=0)\n",
+    "\n",
+    "n = len(centered_y[:,2])\n",
+    "Fs = float(time_steps)/float(T)\n",
+    "Ts = T/Fs\n",
+    "\n",
+    "T = n/Fs\n",
+    "k = np.arange(n)\n",
+    "frq = k/T # two sides frequency range\n",
+    "frq = frq[range(n/2)] # one side frequency range\n",
+    "\n",
+    "Y = np.fft.fft(centered_y[:,2])/n # fft computing and normalization\n",
+    "Y = Y[range(n/2)]\n",
+    "\n",
+    "fig, ax = plt.subplots(2, 1)\n",
+    "ax[0].plot(t,centered_y[:,2])\n",
+    "ax[0].set_xlim(0.0,100.0)\n",
+    "ax[0].set_xlabel('Time')\n",
+    "ax[0].set_ylabel('Amplitude')\n",
+    "ax[1].plot(frq,abs(Y),'.r') # plotting the spectrum\n",
+    "ax[1].set_xlim(0.0,0.1)\n",
+    "ax[1].set_xlabel('Freq (Hz)')\n",
+    "ax[1].set_ylabel('|Y(freq)|')\n",
+    "\n",
+    "plt.show()\n",
+    " \n",
+    "abs_Y = abs(Y)\n",
+    "max_frq_index = np.argmax(abs_Y)\n",
+    "max_frq = frq[max_frq_index]\n",
+    "\n",
+    "print \"Frequency with maximal amplitude:\"\n",
+    "print  max_frq\n",
+    "T_period = 1.0/max_frq\n",
+    "print \"Corresponding time period:\" \n",
+    "print T_period"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
